force-app/main/default/objects/Category__c/Category__c.object-meta.xml
<CustomObject>
    <description>Advertising category taxonomy node. Supports a self-referential parent/child hierarchy used for audience targeting, reporting rollups, and MDM curation.</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>