force-app/main/default/objects/Category__c/fields/Full_Path__c.field-meta.xml
<CustomField>
    <fullName>Full_Path__c</fullName>
    <formula>IF(ISBLANK(Parent_Category__c),
  Name,
  IF(ISBLANK(Parent_Category__r.Parent_Category__c),
    Parent_Category__r.Name &amp; &quot; &gt; &quot; &amp; Name,
    Parent_Category__r.Parent_Category__r.Name &amp; &quot; &gt; &quot; &amp; Parent_Category__r.Name &amp; &quot; &gt; &quot; &amp; Name
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Path</label>
    <type>Text</type>
</CustomField>