force-app/main/default/objects/Category__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(ISBLANK(Parent_Category__c), 1,
  IF(ISBLANK(Parent_Category__r.Parent_Category__c), 2,
    IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__c), 3, 4)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>