force-app/main/default/objects/Category__c/fields/Successor_Category__c.field-meta.xml
<CustomField>
    <fullName>Successor_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Replaced Categories</relationshipLabel>
    <relationshipName>Replaced_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>